<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <ImageView
        android:id="@+id/back_button"
        android:contentDescription="@string/desc_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:src="@drawable/button_back" />

    <RelativeLayout
        android:id="@+id/card_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/back_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:background="@drawable/arrondir_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">
            <FrameLayout
                android:id="@+id/card_frame"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/letter_card">

                <TextView
                    android:id="@+id/hiragana_character"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hiragana_character"
                    android:textColor="#000000"
                    android:textSize="96sp" />

            </FrameLayout>

            <TextView
                android:id="@+id/hiragana_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/Hiragana_label"
                android:textColor="#000000"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
            <EditText
                android:id="@+id/answer_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/hint_label"
                android:autofillHints="name"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">
                <Button
                    android:id="@+id/passer_button"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/button_passer"
                    android:text="@string/Passer_label"
                    android:textColor="#403103" />
                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/button_soumettre"
                    android:text="@string/Soumettre_label"
                    android:textColor="#0A2E4A" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>




</RelativeLayout>